            qpp::QNoisyEngine        - pure state noisy engine, backwards 
                                       compatibility
            qpp::QKetNoisyEngine     - same as qpp::QNoisyEngine
            qpp::QDensityNoisyEngine - mixed state noisy engine
        - Renamed qpp::QEngineT::get_psi() -> qpp::QEngineT::get_state()
        - Removed qpp::QEngineT::is_noisy()

Version 5.0 - 10 January 2024
    - All header files are moved into "[include/qpp]", so to include the header
      one now must '#include "qpp/qpp.h"' (and similarly for other header files
      in the internal implementation). This change was made for the sake of
      making the include statements look "uniform" in both non-installed
      (compiling without having Quantum++ installed) and installed (compiling
      with Quantum++ installed headers) modes.
    - Refactored option-related types into a new header file ["qpp/options.hpp"]
    - qpp::disp() refactoring, formatting options are now passed via
      formatting option manipulator structures, all defined in 
      ["qpp/options.hpp"]. See the ["examples"] directory for usage examples.
    - Implemented qpp::dirac() ["qpp/functions.hpp"] for converting states and
      matrices to Dirac notation, and the corresponding std::ostream manipulator 
      qpp::disp() ["qpp/input_output.hpp"]. The type returned by qpp::dirac() 
      is type-defed as 'qpp::dirac_t' in ["qpp/types.hpp"]. Options are passed
      via the formatting option manipulator structure 'qpp::IOManipDiracOpts'.
    - Implemented pyqpp.dirac() in pyqpp, see above.
    - Significant speedup in pyqpp's compilation time
    - Added support for two qubit rotations by pi/2 (Molmer-Sorensen two qubit
      gates).
    - API changes in ["qpp/classes/circuits/circuits.hpp"]
        [qpp::QCircuit::]
        add_circuit()         -> compose_circuit()
        match_circuit_left()  -> couple_circuit_left()
        match_circuit_right() -> couple_circuit_right()